--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://el3gaming.github.io/react6-task/",
+  "homepage": "https://el3gami.github.io/react6-task/",
   "name": "react06",
   "version": "0.1.0",
   "private": true,
